# NonCryptoHashing

./: CMakeLists.txt  README.md  benchmark  benchmark.cpp  benchmark.h  dataset_loader.cpp  dataset_loader.h  deduplicated_output.txt  deduplication.cpp  deduplication.h  environment_setup.cpp  environment_setup.h  environment_setup.sh  external_dataset.txt  generate_dataset.cpp  hashing_system  ksm_simulation  ksm_simulation.cpp  ksm_simulation.h  main  main.cpp  parallel_hashing  parallel_hashing.cpp  parallel_hashing.h  simd_optimization  simd_optimization.cpp  simd_optimiztion.h  xxhash_integration  xxhash_integration.cpp  xxhash_integration.h
